feat(app): add app first version